--- a/Website/index.html
+++ b/Website/index.html
@@ -12,9 +12,17 @@
 
 <body>
 <h1>Goals of the project</h1>
-<p>I am trying to create a groundwater flow simluation program. The scope of the
+<container>
+<p class="main">I am trying to create a groundwater flow simluation program. The scope of the
     project is not yet very defined, but I would like it to focus mainly around
-    human and environmental health.</p>
+    human and environmental health. <br>
+    Being that I am sequestered at home during the pandemic, I figured that
+    I had better try to make the best of this time. I am a fan of computers, and
+    I like to challenge myself, and this project sure is a project. From only
+    the basic things I've done so far, I've been challenged and frustrated
+    more than I though possible. But that's really the way it should be. 
+</p>
+</container>
 </body>
 
 </html>
