--- a/Website/index.html
+++ b/Website/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="./pages/websites.html">Pages</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+
 <h1>Goals of the project</h1>
 <container>
 <p class="main">I am trying to create a groundwater flow simluation program. The scope of the
@@ -20,7 +28,13 @@
     I had better try to make the best of this time. I am a fan of computers, and
     I like to challenge myself, and this project sure is a project. From only
     the basic things I've done so far, I've been challenged and frustrated
-    more than I though possible. But that's really the way it should be. 
+    more than I though possible. But that's really the way it should be.
+</p>
+
+<p class="main">
+Plans change. I will no longer be trying to create my own modelling program.
+It's much more important that I learn more than try to create something for a
+topic that I don't really understand that much.
 </p>
 </container>
 </body>
